# ollm

./: .gitignore  BUILD_SYSTEM_README.md  README.md  SKILL.md.template  __azurite_db_blob__.json  __azurite_db_blob_extent__.json  build.py  build.sh  build_alt.py  config.json  config.json.backup  config.json.example  debug_keyvault.py  debug_telemetry.py  deploy.sh  diagnose.py  implementation-checklist.md  mcp.json  mcp.json.example  notes.md  plan.md  pyproject.toml  pyproject.toml.backup  pyproject.toml.minimal  requirements.md  test-peptides.md  test_config_no_script.json  uninstall.sh
deployment-setup/: com.ollama.server.plist  deploy-plist.sh  homebrew.mxcl.ollama.plist  start-ollama-server.sh  stop-ollama-server.sh  test-ollama-server.sh
docs/: NewRelic-Impl-Plan.md  NewRelic-requirements.md  Telemetry-Implementation-Summary.md  Telemetry-Requirements.md  file-context-plan.md  file-context-requirements.md  implementation-checklist.md  new-relic-queries.md  notes.md  requirements.md  secrets-requirements.md
skills/data-analysis/: SKILL.md
skills/github-review/: SKILL.md  checklist.md
skills/research/: README.md  SKILL.md  research-plan-template.md  sample_research_script.py  search-strategies.md
skills/writing-help/: SKILL.md
src/ollm/: __init__.py  __main__.py  app.py  cli.py  config.py  errors.py  logging_setup.py  model_selection.py  newrelic_integration.py  ollama_client.py  output.py  paths.py  secrets.py  telemetry.py
src/ollm/data/: default-config.json
src/ollm/loop/: __init__.py  agent_loop.py  timeouts.py
src/ollm/mcp/: __init__.py  client.py  config_schema.py  (+1 more)
tests/: conftest.py  manual_test_plan.md  peptide-trap.md  research-reta.md  test_config.py  test_file_attachment.py  test_functional.py  test_integration.py  test_model_selection.py  test_paths.py  test_resource_limits.py  test_skills.py  test_writing_help_skill.sh
tests/UAT-tests/: research-reta.md  research-reta.sh  reta-results.md
(+13 files in other folders)
